--- a/src/chatty/gui/components/help/help-releases.html
+++ b/src/chatty/gui/components/help/help-releases.html
@@ -17,6 +17,7 @@
     <h1><a name="top">Release Information</a></h1>
     
     <p>
+        <a href="#0.16">0.16</a> |
         <a href="#0.15">0.15</a> |
         <a href="#0.14">0.14</a> |
         <a href="#0.13.1">0.13.1</a> |
@@ -64,7 +65,13 @@
     full list of changes.</p>
     
     <h2>
-        <a name="0.15">Version 0.15</a> <a name="latest">(This one!) (2021-07-03)</a>
+        <a name="0.15">Version 0.16</a> <a name="latest">(This one!) (2021-??-??)</a>
+        <a href="#top" class="top">[back to top]</a>
+    </h2>
+    <p>Beta, TBD</p>
+    
+    <h2>
+        <a name="0.15">Version 0.15</a> (This one!) (2021-07-03)
         <a href="#top" class="top">[back to top]</a>
     </h2>
     <p>More Tabs/Layouts improvements:</p>
